Changing actual vendor

--- a/appinfo.json
+++ b/appinfo.json
@@ -1,5 +1,5 @@
 {
-    "vendor": "PatrickR",
+    "vendor": "MarechalLima",
     "iconColor": "#6441a5",
     "largeIcon": "largeIcon.png",
     "icon": "icon.png",
